# xsdata-attrs

./: .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  tests.yml
docs/: bindings.md  bindings.rst  codegen.md  codegen.rst  conf.py  index.md  index.rst  installation.md  installation.rst
tests/: fixtures.py  test_bindings.py  test_compat.py  test_generator.py
tests/fixtures/: attrs.conf.xml
tests/fixtures/po/: models.py
xsdata_attrs/: bindings.py  compat.py  generator.py  hook.py
xsdata_attrs/hooks/: class_type.py
