[metadata]
name = xsdata_attrs
version = 21.6
description = xsdata attrs plugin
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/tefra/xsdata-attrs
author = Christodoulos Tsoulloftas
author_email = "chris@komposta.net",
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Code Generators
    Topic :: Text Processing :: Markup :: XML
keywords = xsd,wsdl,schema,xml,attrs,generator,cli
project_urls =
    Source=https://github.com/tefra/xsdata-attrs

[options]
packages = xsdata_attrs
install_requires =
    attrs
    xsdata@git+https://github.com/tefra/xsdata@master#egg=xsdata
python_requires = >=3.6
include_package_data = True

[options.entry_points]
xsdata.plugins.class_types =
    xsdata_attrs = xsdata_attrs.hooks.class_type
xsdata.plugins.cli =
    xsdata_attrs = xsdata_attrs.hooks.cli

[options.extras_require]
cli =
    xsdata[cli]@git+https://github.com/tefra/xsdata@master#egg=xsdata
docs =
    furo
    sphinx
    sphinx-autobuild
    sphinxcontrib-programoutput
test =
    codecov
    lxml
    pre-commit
    pytest
    pytest-cov
    tox

[flake8]
exclude = tests/*
max-line-length = 88
ignore = W503,ANN101,ANN102,E203

[doc8]
max-line-length = 88

[tool:pytest]
addopts = --color=yes
